RAJOUTE FULLTEXT search in Article + CORRIGE BUG LABEL
Bug label :  si le label etait a false le produit ne s'actualise
pas en base

--- a/templates/admin_produit/_produit_form.html.twig
+++ b/templates/admin_produit/_produit_form.html.twig
@@ -6,7 +6,7 @@
                     label : 'Description'
                 }) }}
                 {{ form_row(produitForm.frais_adhesion,{
-                    label : 'Fraix d\'adhésion'
+                    label : 'Frais d\'adhésion'
                 }) }}
                 {{ form_row(produitForm.frais_versement,{
                     label : 'Frais de versement'
