CREE entite CategorieUC et Routes + BackOffice CategorieUC

--- a/templates/_admin_template.html.twig
+++ b/templates/_admin_template.html.twig
@@ -31,6 +31,9 @@
                         <a class="navbar-item" href="{{ path('admin_categorie_liste') }}">
                             Catégories
                         </a>
+                        <a class="navbar-item" href="{{ path('admin_categorie_uc_liste') }}">
+                            Catégories UC
+                        </a>
                         <a class="navbar-item" href="{{ path('admin_gestion_liste') }}">
                             Types de gestion
                         </a>
