--- a/templates/admin_categorie/_categorie_form.html.twig
+++ b/templates/admin_categorie/_categorie_form.html.twig
@@ -1,6 +1,6 @@
 {{ form_start(categorieForm) }}
     {{ form_row(categorieForm.nom,{
-        label : 'Catégorie de produit'
+        label : 'Catégorie d\'investissement du produit'
     }) }}
 <button type="submit" class="button is-success is-fullwidth">
     Enregistrer
