--- a/templates/admin_produit/_produit_form.html.twig
+++ b/templates/admin_produit/_produit_form.html.twig
@@ -32,8 +32,8 @@
                 {{ form_row(produitForm.categorie,{
                     label : 'Catégorie'
                 }) }}
-                {{ form_row(produitForm.categorie,{
-                    label : 'Catégorie'
+                {{ form_row(produitForm.categories_uc,{
+                    label : 'Catégorie UC'
                 }) }}
                 {{ form_row(produitForm.gestion,{
                     label : 'Gestion'
