CREE cache pour l'annee fonds euro non null + CORRIGE bugs

--- a/templates/_template.html.twig
+++ b/templates/_template.html.twig
@@ -93,7 +93,7 @@
                     </div>
                     <div class="tile is-parent">
                         <div class="tile is-child box">
-                            <h3 class="title is-size-6-touch is-size-4-desktop pb-2 has-text-centered mb-6">Découvrez le produit du mois</h3>
+                            <h3 class="title is-size-6-touch is-size-4-desktop pb-2 has-text-centered mb-6">Découvrez le produit de l'année</h3>
                             {# <p>{{ produit.title | default('') }}</p> #}
                             <div class="tile is-child has-text-centered">
                                 <a href="{{ path('show_best_produit') }}" class="">
